--- a/normalize.css
+++ b/normalize.css
@@ -8,14 +8,20 @@
   box-sizing: border-box;
 }
 
+@font-face {
+  font-display: swap;
+  font-family: Work Sans;
+  font-style: normal;
+  src: local(Work Sans), url("./fonts/Work-Sans.woff2") format(woff2);
+}
+
 html {
   font-size: 10px;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Work Sans, sans-serif;
   line-height: 1.5;
-  color: #fff;
 }
 
 a,
