--- a/normalize.css
+++ b/normalize.css
@@ -105,3 +105,24 @@ img {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
 }
+
+.btn {
+  font-size: 1.6rem;
+  font-weight: 600;
+  padding: 1rem;
+  border-radius: 8px;
+  border: none;
+  cursor: pointer;
+
+  display: grid;
+  grid-template-columns: repeat(2, max-content);
+  align-items: center;
+  gap: 0.8rem;
+  color: var(--darkBlueColor);
+  object {
+    fill: var(--darkBlueColor);
+  }
+  &.btn-text {
+    background-color: transparent;
+  }
+}
