--- a/style.css
+++ b/style.css
@@ -1,41 +1,50 @@
 /** @format */
 
-.header {
-  display: grid;
-  /* grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(7, min-content); */
+:root {
+  /* Colors */
+  --darkBlueColor: #154e85;
+  --darkBlueColor-600: #2768a7;
+  --lightBlueColor: #3d84c9;
+  --lightBlueColor-400: #59a3eb;
+  --lightBlueColor-200: #73baff;
+  --white: #fff;
+  --black: #000;
+}
 
-  > img {
-    grid-column: 1/-1;
-    grid-row: 1/ 1;
-    height: 100vh;
-  }
+/* ------------------header--------------------  */
+.header {
+  background-image: url(img/1.webp);
+  background-size: cover;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  grid-template-rows: repeat(1, 1fr);
 }
 
 .navbar {
   grid-column: 1 / -1;
   grid-row: 1 / 1;
-  padding: 1rem;
 
   display: grid;
-  grid-template-columns: repeat(10, 1fr);
-  grid-template-rows: repeat(1, 48px);
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(1, min-content);
 
   justify-content: space-between;
   align-items: center;
+
+  padding: 2rem;
 }
 
 .navbar_brand {
   grid-row: 1/1;
 
   display: grid;
-  grid-template-rows: repeat(1, 40px);
   justify-content: flex-start;
   align-items: center;
   gap: 0.5rem;
 
   .navbar_brand-logo {
-    height: 54px;
+    height: 64px;
     grid-column: 1/1;
     grid-row: 1/1;
 
@@ -50,17 +59,17 @@
 
     font-size: 1.6rem;
     font-weight: 600;
-    color: #000;
+    color: var(--darkBlueColor-600);
   }
 }
 
 .navbar-links {
-  grid-column: 7/12;
+  grid-column: 2/2;
   grid-row: 1/1;
   justify-self: end;
   font-weight: 600;
   a {
-    color: #000;
+    color: var(--darkBlueColor-600);
   }
 }
 
@@ -70,7 +79,7 @@
   display: grid;
   align-content: center;
   justify-items: center;
-  gap: 1rem;
+  gap: 2rem;
   input {
     padding: 1.5rem;
     width: 40%;
@@ -79,5 +88,148 @@
   }
   .header-content-title {
     font-size: 4rem;
+    color: var(--darkBlueColor);
+    span {
+      color: var(--darkBlueColor-600);
+    }
+  }
+}
+
+/*tours section----------------------------------- */
+.tours {
+  display: grid;
+  padding: 6rem 2rem;
+  gap: 4rem;
+  justify-items: center;
+}
+.tours_heading {
+  color: var(--darkBlueColor);
+}
+.tours_cards {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 4rem;
+}
+
+.tours_card {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  transition: transform 0.5s ease-in;
+  transform: translate(0, 0);
+  border-radius: 12px;
+  /* &:hover {
+    transform: translate(-1px, -1px);
+    box-shadow: 0px 0px 10px red;
+  } */
+}
+.tours_card-img {
+  grid-row: 1/-1;
+  grid-column: 1/-1;
+
+  width: 32rem;
+  height: 40rem;
+  position: relative;
+  &::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    border-radius: 12px;
+    background-image: linear-gradient(
+      210deg,
+      rgba(0, 0, 0, 0),
+      rgba(89, 163, 235, 0.6)
+    );
+    z-index: 1;
+  }
+  img {
+    border-radius: 12px;
+    object-fit: cover;
+  }
+}
+
+.tours_card-title {
+  grid-column: 1/-1;
+  grid-row: 2/2;
+  justify-self: center;
+  align-self: end;
+  z-index: 1;
+
+  color: var(--white);
+  padding: 16px;
+}
+
+.carousel-circles {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center;
+
+  gap: 0.8rem;
+  span {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background-color: var(--lightBlueColor-200);
+    &:nth-child(2) {
+      width: 14px;
+      height: 14px;
+      border-radius: 50%;
+      background-color: var(--lightBlueColor);
+    }
+  }
+}
+
+/* Activites section------------------------------------------ */
+
+.activites {
+  display: grid;
+  grid-template-rows: repeat(2, min-content);
+  gap: 6.4rem;
+
+  padding: 6rem 2rem;
+}
+
+.activites_option {
+  display: grid;
+  grid-template-rows: 1fr;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 4rem;
+}
+
+.activites_option-img {
+  grid-row: 1/1;
+  grid-column: 1/2;
+  img {
+    border-radius: 12px;
+  }
+}
+
+.activites_option-list {
+  display: grid;
+  grid-template-rows: repeat(5, min-content);
+  border: 2px solid var(--darkBlueColor);
+  border-radius: 12px;
+}
+.activites_option-list_item {
+  display: grid;
+  grid-template-columns: repeat(3, max-content);
+  justify-content: space-between;
+  align-items: center;
+
+  padding: 1.6rem 4rem;
+  gap: 1rem;
+
+  &:not(:last-child) {
+    border-bottom: 2px solid var(--darkBlueColor-600);
+  }
+  p {
+    font-weight: 600;
+    font-size: 2rem;
+    color: var(--darkBlueColor);
+  }
+  button {
+    justify-self: end;
   }
 }
