--- a/normalize.css
+++ b/normalize.css
@@ -10,9 +10,9 @@
 
 @font-face {
   font-display: swap;
-  font-family: Work Sans;
+  font-family: Rubik;
   font-style: normal;
-  src: local(Work Sans), url("./fonts/Work-Sans.woff2") format(woff2);
+  src: local(Work Sans), url("./fonts/Rubik.woff2") format(woff2);
 }
 
 html {
@@ -20,12 +20,11 @@ html {
 }
 
 body {
-  font-family: Work Sans, sans-serif;
+  font-family: Rubik, sans-serif;
   line-height: 1.5;
 }
 
-a,
-input[type="submit"] {
+a {
   text-decoration: none;
   color: #333;
   border-radius: 0.5rem;
