--- a/style.css
+++ b/style.css
@@ -233,3 +233,66 @@
     justify-self: end;
   }
 }
+
+/*  */
+
+.quote {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 400px;
+  place-items: center;
+
+  padding: 4rem;
+  background-image: linear-gradient(
+      180deg,
+      rgba(0, 0, 0, 0.1),
+      rgba(115, 185, 255, 0.25)
+    ),
+    url("img/6.webp");
+  background-size: cover;
+}
+
+.quote_content {
+  padding: 8rem 18rem;
+  background-color: var(--white);
+  opacity: 0.5;
+  border-radius: 12px;
+}
+.quote_content-text {
+  font-size: 24px;
+  font-weight: 500;
+  text-align: center;
+  color: var(--darkBlueColor);
+}
+.quote_content-author {
+  padding-bottom: 8px;
+  font-size: 18px;
+  font-weight: 500;
+  text-align: center;
+  color: var(--darkBlueColor);
+  border-bottom: 1px solid var(--darkBlueColor);
+}
+
+/* Feedback Section-------------------------------------- */
+.feedback {
+  display: grid;
+  padding: 4rem;
+  place-items: center;
+}
+
+.feedback_content {
+  display: grid;
+  grid-template-rows: repeat(4, min-content);
+  gap: 4rem;
+  place-items: center;
+}
+
+.feedback_content-user_img {
+  img {
+    width: 20rem;
+    height: 20rem;
+    border-radius: 50%;
+    object-fit: cover;
+    object-position: center;
+  }
+}
