--- a/style.css
+++ b/style.css
@@ -282,17 +282,52 @@
 
 .feedback_content {
   display: grid;
-  grid-template-rows: repeat(4, min-content);
-  gap: 4rem;
+  grid-template-rows: repeat(5, min-content);
+  grid-template-columns: repeat(3, auto);
+  gap: 3rem;
   place-items: center;
+}
+.feedback_content-title {
+  grid-row: 1/1;
+  grid-column: 2/3;
 }
 
 .feedback_content-user_img {
+  grid-row: 2/2;
+  grid-column: 2/3;
   img {
     width: 20rem;
     height: 20rem;
     border-radius: 50%;
     object-fit: cover;
     object-position: center;
+  }
+}
+
+.feedback_content-text {
+  grid-row: 3/3;
+  grid-column: 2/3;
+
+  text-align: center;
+  font-weight: 600;
+  font-size: 2.4rem;
+  color: var(--darkBlueColor);
+  padding: 0 14rem;
+}
+
+.feedback_content-username {
+  grid-row: 4/4;
+  grid-column: 2/3;
+
+  font-size: 3.6rem;
+  color: var(--darkBlueColor-600);
+}
+
+.feedback_content-nav {
+  grid-row: 5/5;
+  grid-column: 2/3;
+
+  object {
+    padding: 0 0.5rem;
   }
 }
